--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.7",
     "axios": "^1.4.0",
+    "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
