--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,11 +14,17 @@
     "axios": "^1.4.0",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
+    "react-aria": "^3.25.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-stately": "^3.23.0"
   },
   "devDependencies": {
+    "@react-aria/listbox": "^3.9.1",
+    "@react-aria/overlays": "^3.14.1",
+    "@react-types/combobox": "^3.6.2",
+    "@react-types/shared": "^3.18.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
