--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.29.7",
     "axios": "^1.4.0",
     "firebase": "^9.22.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-aria": "^3.25.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
     "@react-aria/overlays": "^3.14.1",
     "@react-types/combobox": "^3.6.2",
     "@react-types/shared": "^3.18.1",
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
