Build fix and eslint fixes

--- a/apps/client/.eslintrc.json
+++ b/apps/client/.eslintrc.json
@@ -30,5 +30,8 @@
     "prettier",
     "jsx-a11y"
   ],
-  "rules": {}
+  "rules": {
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off"
+  }
 }
